CLASSES-3145 11.4 upgrade: fix lessonbuilder z-index styles breaking NYU portal styles near tool menu

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -2036,6 +2036,11 @@ nav.Mrphs-container--toolTitleNav .Mrphs-directUrl__dropDown .active {
         padding-bottom: 0 !important;
         margin-bottom: 1em !important;
 }
+/* menu off user icon, site menu in narrow, site menu in  wide mode */
+.Mrphs-mainHeader, .Mrphs-skipNav__menu, #selectSiteModal {
+        z-index: 100002 !important;
+	position:relative;
+}
 /* chat open button */
 #Mrphs-footerApp__chat {
         z-index: 100003 !important;
